[Fix] Blog post texts are too big on mobile devices

--- a/src/assets/css/blog.css
+++ b/src/assets/css/blog.css
@@ -95,4 +95,8 @@
   .blog-post-title {
     text-align: center;
   }
+
+  .blog-post-description {
+    font-size: 1.1rem !important;
+  }
 }
